--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=This is a library to control Unicore GNSS receivers, with a focus on t
 category=Sensors
 url=https://github.com/sparkfun/SparkFun_Unicore_GNSS_Arduino_Library
 architectures=*
-depends=SparkFun Extensible Message Parser
+depends=SparkFun Extensible Message Parser (>=2.0.0)
